--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,111 @@
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #d0e7f9;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.game-board {
+  width: 100%;
+  height: 500px;
+  border-bottom: 15px solid #28e003b9;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(#87ceeb, #e0f6ff);
+}
+
+.pipe {
+  position: absolute;
+  bottom: 0;
+  width: 80px;
+  animation: pipe-animation 1.5s infinite linear; 
+}
+
+.mario {
+  width: 150px;
+  position: absolute;
+  bottom: 0;
+}
+
+.jump {
+  animation: jump 500ms ease-out;
+}
+
+.clouds {
+  position: absolute;
+  width: 550px;
+  animation: clouds-animation 20s infinite linear;
+}
+
+.game-over {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 1; /* Colocamos o game-over acima do pipe */
+}
+
+.game-over-image {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.restart-button {
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: 2px solid #000;
+  background-color: #f7f7f7;
+  color: #000;
+  border-radius: 5px;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.restart-button:hover {
+  background-color: #000;
+  color: #f7f7f7;
+  transform: scale(1.05); /* Efeito de escala no hover */
+}
+
+
+@keyframes pipe-animation {
+  from {
+    right: -80px;
+  } 
+  to {
+    right: 100%
   }
-  
-  .game {
-    position: relative;
-    width: 800px;
-    height: 400px;
-    background-color: #72d874;
-    border: 4px solid #45a049;
-    overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-  }
-  
-  .mario {
-    position: absolute;
+}
+
+@keyframes jump {
+  0% {
     bottom: 0;
-    left: 50px;
-    width: 60px;
-    height: 95px;
-    background-image: url('mario.png');
-    background-size: contain;
-    animation: walk 0.8s steps(4) infinite;
+  }
+
+  40% {
+    bottom: 180px;
   }
   
-  .coin {
-    position: absolute;
-    bottom: 50px;
-    left: 700px;
-    width: 30px;
-    height: 30px;
-    background-image: url('coin.png');
-    background-size: contain;
-    animation: spin 0.8s infinite linear;
+  50% {
+    bottom: 180px;
   }
-  
-  @keyframes jump {
-    0%, 100% {
-      bottom: 0;
-    }
-    50% {
-      bottom: 100px;
-    }
+
+  60% {
+    bottom:180px;
   }
-  
-  @keyframes walk {
-    0% {
-      background-position: 0;
-    }
-    100% {
-      background-position: -240px;
-    }
+
+  100% {
+    bottom: 0;
   }
-  
-  @keyframes spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+}
+
+@keyframes clouds-animation {
+  from {
+    right: -550px;
   }
-  
-  
-  
+  to {
+    right: 100%;
+  }
+}
